feat(openAPI): Teams;
Added teams API;
