# app/Controllers/V1/Teams.php
@@ -4,12 +4,28 @@ namespace App\Controllers\V1;
 
 use App\Entities\Team;
 use CodeIgniter\RESTful\ResourceController;
+use OpenApi\Attributes as OA;
 
 class Teams extends ResourceController
 {
     protected $modelName = 'App\Models\TeamModel';
     protected $format = 'json';
 
+    #[OA\Get(
+        path: "api/v1/teams",
+        operationId: "teamsListing",
+        summary: "Get list of teams",
+        security: [["bearerAuth" => []]],
+        tags: ["teams"],
+        parameters: [
+            new OA\Parameter(ref: "#/components/parameters/Locale"),
+            new OA\Parameter(ref: "#/components/parameters/Pagination_page"),
+            new OA\Parameter(ref: "#/components/parameters/Pagination_per_page"),
+        ],
+        responses: [
+            new OA\Response(ref: "#/components/responses/200", response: 200),
+        ]
+    )]
     public function index()
     {
         service('authorization')->authorize('index', Team::class);
@@ -28,6 +44,23 @@ class Teams extends ResourceController
         return $this->respond($data);
     }
 
+    #[OA\Post(
+        path: "api/v1/teams",
+        operationId: "createTeam",
+        summary: "Create Team",
+        security: [["bearerAuth" => []]],
+        requestBody: new OA\RequestBody(required: true, content: [
+            new OA\JsonContent(ref: "#/components/schemas/RequestCreateTeam")]),
+        tags: ["teams"],
+        parameters: [
+            new OA\Parameter(ref: "#/components/parameters/Locale"),
+        ],
+        responses: [
+            new OA\Response(ref: "#/components/responses/200", response: 200),
+            new OA\Response(ref: "#/components/responses/403", response: 403),
+            new OA\Response(ref: "#/components/responses/500", response: 500),
+        ]
+    )]
     public function create()
     {
         service('authorization')->authorize('create', Team::class);
@@ -38,6 +71,23 @@ class Teams extends ResourceController
         return $this->respond(['team' => $this->model->find($id)]);
     }
 
+    #[OA\Get(
+        path: "api/v1/teams/{teamId}",
+        operationId: 'showTeam',
+        summary: "Team information",
+        security: [["bearerAuth" => []]],
+        tags: ["teams"],
+        parameters: [
+            new OA\Parameter(name: "teamId", description: "Team ID", in: "path", required: true, schema: new OA\Schema(type: "integer")),
+            new OA\Parameter(ref: "#/components/parameters/Locale"),
+        ],
+        responses: [
+            new OA\Response(ref: "#/components/responses/200", response: 200),
+            new OA\Response(ref: "#/components/responses/401", response: 401),
+            new OA\Response(ref: "#/components/responses/404", response: 404),
+            new OA\Response(ref: "#/components/responses/500", response: 500),
+        ]
+    )]
     public function show($id = null)
     {
         $team = $this->model->find($id);
@@ -45,6 +95,26 @@ class Teams extends ResourceController
         return $this->respond(['team' => $team]);
     }
 
+    #[OA\Patch(
+        path: "api/v1/teams/{teamId}",
+        operationId: 'updateTeam',
+        summary: "Update team",
+        security: [["bearerAuth" => []]],
+        requestBody: new OA\RequestBody(required: true, content: [
+            new OA\JsonContent(ref: "#/components/schemas/RequestUpdateTeam")]),
+        tags: ["teams"],
+        parameters: [
+            new OA\Parameter(name: "teamId", description: "Team ID", in: "path", required: true, schema: new OA\Schema(type: "integer")),
+            new OA\Parameter(ref: "#/components/parameters/Locale"),
+        ],
+        responses: [
+            new OA\Response(ref: "#/components/responses/200", response: 200),
+            new OA\Response(ref: "#/components/responses/401", response: 401),
+            new OA\Response(ref: "#/components/responses/403", response: 403),
+            new OA\Response(ref: "#/components/responses/404", response: 404),
+            new OA\Response(ref: "#/components/responses/500", response: 500),
+        ]
+    )]
     public function update($id = null)
     {
         $team = $this->model->find($id);
@@ -55,6 +125,22 @@ class Teams extends ResourceController
         return $this->respond(['team' => $this->model->find($id)]);
     }
 
+    #[OA\Delete(
+        path: "api/v1/teams/{teamId}",
+        operationId: 'deleteTeam',
+        summary: "Delete team",
+        security: [["bearerAuth" => []]],
+        tags: ["teams"],
+        parameters: [
+            new OA\Parameter(name: "teamId", description: "Team ID", in: "path", required: true, schema: new OA\Schema(type: "integer")),
+            new OA\Parameter(ref: "#/components/parameters/Locale"),
+        ],
+        responses: [
+            new OA\Response(ref: "#/components/responses/401", response: 401),
+            new OA\Response(ref: "#/components/responses/404", response: 404),
+            new OA\Response(ref: "#/components/responses/500", response: 500),
+        ]
+    )]
     public function delete($id = null)
     {
         service('authorization')->authorize('create', Team::class);
